# Cripto_Project

./: README.md
CSC/: .gitignore  .gitignore.txt  App  CA  CA.cpp  CMakeCache.txt  CMakeLists.txt  ClientApp.cpp  DBprivate_key.txt  DBprivkey.txt  Makefile  Relin_key.txt  cmake_install.cmake  commandHandler.py  comparator.h  serverapi  serverapi.cpp
CSC/Admin/: CAcert.crt  CAcert.srl  CAprivate_key.key  DBprivate_key.txt  DBpublic_key.txt  DBpublic_key_signed.txt  Relin_key.txt  Relin_key_signed.txt  c1-cert.csr  c2-cert.csr  c3-cert.csr
CSC/ClientApp/Client1/: DBpublic_key.txt  DBpublic_key_signed.txt  c1-cert.crt  c1-cert_signed.txt  c1pk.key  c1pk_signed.txt  server-cert.crt
CSC/ClientApp/Client2/: c2-cert.crt  c2-cert_signed.txt  c2pk.key  c2pk_signed.txt
CSC/ClientApp/Client3/: DBprivate_key.txt  c3-cert.crt  c3pk.key
CSC/Clients/Client1/: CAcert.crt  CApubkey.pem  DBprivate_key.txt  DBprivate_key_signed.txt  DBpublic_key.txt  c1-cert.crt  (+6 more)
CSC/CompFunc/: CompFunc.h  Makefile  cmake_install.cmake  comparator.cpp
CSC/HelpFunc/: CMakeLists.txt  HelpFunc.h  Makefile  cmake_install.cmake  enc_dec_func.cpp
CSC/Server/: CAcert.crt  CAcert.srl  CApubkey.pem  Relin_key.txt  Relin_key_signed.txt  c1-cert.crt  c1-cert_signed.txt  c2-cert.crt  c2-cert_signed.txt  c3-cert.crt  c3-cert_signed.txt  msg.txt  msg.txt.enc  msg_signed.txt.enc  server-cert.crt  server-cert.csr  server_pk.key
Tests/: CMakeCache.txt  CMakeLists.txt  DBprivate_key.txt  DBpublic_key.txt  Makefile  Relin_key.txt  a.out  cmake_install.cmake  hello  hello.cpp  lol.enc  msg.txt  pod.txt  result.txt  test  test.cpp  x.txt  y.txt
Tests/CompFunc/: CMakeLists.txt  CompFunc.h  Makefile  cmake_install.cmake  comparator.cpp
Tests/HelpFunc/: HelpFunc.h  Makefile  cmake_install.cmake  enc_dec_func.cpp
Tests/k/: k.hex
Tests/p/: p.hex
Tests/x/: x.hex
Tests/y/: y.hex
Tests/z/: z.hex
(+90 files in other folders)
